finish all function for student