@@ -125,17 +125,19 @@ public class CourseopenEntity {
     {
 
     }
+
+
     public CourseopenEntity(Object[] data)
     {
         if(data.length==7)
         {
             subjectid=(String) data[0];
             courseclass=(String)data[1];
-            beginshift=new Integer((String)data[2]);
-            endshift=new Integer((String) data[3]);
-            diw=new Integer((String) data[4]);
+            beginshift=Integer.valueOf((String)data[2]);
+            endshift=Integer.valueOf((String) data[3]);
+            diw=Integer.valueOf((String) data[4]);
             teacher=(String)data[5];
-            maxtotal=new Integer((String) data[6]);
+            maxtotal=Integer.valueOf((String) data[6]);
             semsesid= AcademicUI.getCurrentSemester();
             openid=subjectid+semsesid;
         }
